<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/notificationImage"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/bell_ring"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/notificationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/notification_title"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/notificationDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="18dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_semibold"
            android:maxLines="2"
            android:text="@string/this_is_the_notification_description_which_can_be_long_and_will_be_truncated"
            android:textColor="@android:color/black"
            android:textSize="10sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8.dp">

            <TextView
                android:id="@+id/tvNotificationChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/chip_background"
                android:fontFamily="@font/poppins_bold"
                android:padding="6dp"
                android:layout_marginEnd="8dp"
                android:text="@string/from_api"
                android:textColor="@android:color/white"
                android:textSize="10sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/created_on"
                android:layout_marginEnd="8dp"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/notificationTimestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/_10_30_am"
                android:textSize="10sp" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>
